--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Productos</a>
+                 <a class="nav-link" href="#">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Precio</a>
+               <a class="nav-link" href="./precio.html">Precio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Información</a>
