--- a/Inicio.html
+++ b/Inicio.html
@@ -59,6 +59,9 @@
               <li class="nav-item">
                 <a class="nav-link disabled" aria-disabled="true">Información</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./formulario.html">Encuesta</a>
+               </li>
             </ul>
           </div>
         </div>
